@@ -126,22 +126,8 @@ setup (name = "mnemosyne",
        author = "Peter Bienstman",
        author_email = "Peter.Bienstman@UGent.be",
        packages = ["mnemosyne", "mnemosyne.pyqt_ui","mnemosyne.core"],
-       #data_files = [(pixmap_path,
-       #               ["pixmaps/edit.png",
-       #                "pixmaps/editclear.png",
-       #                "pixmaps/fileopen.png",
-       #                "pixmaps/exit.png",
-       #                "pixmaps/filesave.png",
-       #                "pixmaps/contents.png",
-       #                "pixmaps/fileexport.png",
-       #                "pixmaps/filesaveas.png",
-       #                "pixmaps/edit.png",
-       #                "pixmaps/fileimport.png",
-       #                "pixmaps/edit_add.png",
-       #                "pixmaps/editdelete.png",
-       #                "pixmaps/filenew.png",
-       #                "pixmaps/configure.png",
-       #                "pixmaps/mnemosyne.png"])],
+       data_files = [('/usr/share/applications', ['mnemosyne.desktop']),
+                     ('/usr/share/icons', ['pixmaps/mnemosyne.png'])],
        scripts = ['mnemosyne/pyqt_ui/mnemosyne'],
        windows = [{'script':'mnemosyne/pyqt_ui/mnemosyne',
                    "icon_resources":[(1,"pixmaps/mnemosyne.ico")]}],
